--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href=""><img class="logo" src="img/logo.png" alt="logo"></a>
             <div>
                 <ul id="navbar">
-                    <li><a href="index.html">Home</a></li>
+                    <li><a class="active" href="index.html">Home</a></li>
                     <li><a href="shop.html">Shop</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="about.html">About</a></li>
@@ -24,6 +24,16 @@
          </div>
     </section>
 
+    <!-- Hero -->
+     <section id="hero">
+        <h4>Trade-in-offer</h4>
+        <h2>Super value offers</h2>
+        <h1>On all products</h1>
+        <p>save more with coupns & up to 70% off</p>
+        <button>Shop Now</button>
+     </section>
+
+   
     <script src="script.js"></script>
 </body>
 </html>
