--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- Header -->
     <section id="header">
-        <a href=""><img class="logo" src="img/logo.png" alt="logo"></a>
+        <a href=""><img class="logo" src="img/logo (1).png" alt="logo"></a>
             <div>
                 <ul id="navbar">
                     <li><a class="active" href="index.html">Home</a></li>
@@ -33,7 +33,30 @@
         <button>Shop Now</button>
      </section>
 
-   
+    <!-- Feature -->
+     <section id="feature" class="p1-section">
+        <div class="fe-box">
+            <img src="img/f1.png" alt="">
+            <h6>Free Shipping</h6>
+        </div>
+        <div class="fe-box">
+            <img src="img/f2.png" alt="">
+            <h6>Online Order</h6>
+        </div>
+        <div class="fe-box">
+            <img src="img/f3.png" alt="">
+            <h6>Save Money</h6>
+        </div>
+        <div class="fe-box">
+            <img src="img/f4.png" alt="">
+            <h6>Promotions</h6>
+        </div>
+        <div class="fe-box">
+            <img src="img/f5.png" alt="">
+            <h6>Happy Sell</h6>
+        </div>   
+     </section>
+
     <script src="script.js"></script>
 </body>
 </html>
