--- a/index.html
+++ b/index.html
@@ -206,6 +206,15 @@
     </div>     
      </section>
 
+     <!-- Banner Section -->
+      <section>
+        <div id="banner">
+            <h4>Repair Services</h4>
+            <h2>Up to <span>70% Off</span>- All t-Shirts & Accessories</h2>
+            <BUtton>Explore More</BUtton>
+        </div>
+      </section>
+
     <script src="script.js"></script>
 </body>
 </html>
