boxes banner section

--- a/index.html
+++ b/index.html
@@ -366,6 +366,26 @@
     </div>     
      </section>
 
+            <!-- Boxes Banner -->
+     <div class="box-container">
+        <div class="box" id="box1">
+            <div class="content">
+                <h4>Crazy Deals</h4>
+                <h2>Buy 1 Get 1 Free</h2>
+                <span>The Best Classic Dress on Sale at Cora</span>
+                <button>Learn More</button>
+            </div>
+        </div>
+        <div class="box" id="box2">
+            <div class="content">
+                <h4>Spring / Summer</h4>
+                <h2>Up Comming Season</h2>
+                <span>The Best Classic Dress on Sale at Cora</span>
+                <button>Collection</button>
+            </div>
+        </div>
+    </div>
+    
     <script src="script.js"></script>
 </body>
 </html>
