--- a/index.html
+++ b/index.html
@@ -384,7 +384,32 @@
                 <button>Collection</button>
             </div>
         </div>
-    </div>
+</div>
+
+
+        <!-- Banner Card -->
+        <div class="card-wrapper">
+            <div class="card">
+                <div class="card-content">
+                    <h2>Card 1 Title</h2>
+                    <p>Some description or text goes here.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-content">
+                    <h2>Card 2 Title</h2>
+                    <p>Some description or text goes here.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-content">
+                    <h2>Card 3 Title</h2>
+                    <p>Some description or text goes here.</p>
+                </div>
+            </div>
+        </div>
+     
+
     
     <script src="script.js"></script>
 </body>
